# lore-designer

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  .releaserc.js  AGENTS.md  CHANGELOG.md  Cargo.toml  GEMINI.md  LICENSE  README.md  ROADMAP.md  TODO.md  biome.json  bun.lockb  cliff.toml  components.json  crowdin.yml  nuxt.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  qodana.yaml  renovate.json  revert-version.js  tailwind.config.js  tsconfig.app.json  tsconfig.json  update-version.js  vite.config.ts
.cargo/: config.toml
.claude/: settings.local.json
.github/: git-commit-instructions.md  release-drafter.yml
.github/workflows/: crowdin.yml  desktop-release.yml  publish.yml  qodana_code_quality.yml  release.yml
apps/desktop/: .gitignore  components.json  index.html  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.test.tsx  App.tsx  App.vue  AppProviders.tsx  i18n.ts  main.ts  main.tsx  routeTree.gen.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json  desktop.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  system_info.rs
apps/desktop/src-tauri/src/commands/: workspace.rs
apps/desktop/src-tauri/src/core/: console.rs  error.rs  mod.rs
apps/desktop/src-tauri/src/core/config/: commands.rs  mod.rs  preferences.rs
apps/desktop/src-tauri/src/workspace/: manifest.rs  mod.rs
apps/desktop/src/api/: app.ts  documents.ts  workspace.ts
apps/desktop/src/assets/: global.css  milkdown-custom-theme.css
apps/desktop/src/core/editor-shell/: helpers.ts  mockData.ts  store.tsx  types.ts
apps/desktop/src/core/menu/: builder.ts  types.ts
apps/desktop/src/core/platform/: composable.ts  detector.ts
apps/desktop/src/core/preferences/: preferences.store.ts
apps/desktop/src/core/stores/: ui.store.ts
apps/desktop/src/core/title/: useAppTitle.ts
apps/desktop/src/features/document-editor/: DocumentEditor.tsx
apps/desktop/src/features/editor-shell/: EditorShell.tsx
apps/desktop/src/features/editor-tabs/: EditorTabs.tsx
apps/desktop/src/features/file-tree/: LoreFileTree.tsx
apps/desktop/src/hooks/: use-sync-native-theme.ts
apps/desktop/src/locales/: en.json  es.json
apps/desktop/src/router/: index.ts
apps/desktop/src/routes/: __root.tsx  index.tsx  settings.tsx
apps/desktop/src/store/: editor-shell-helpers.ts  editor-shell.ts  mock-data.ts
apps/desktop/src/types/: editor.ts
apps/desktop/src/widgets/: AppSidebar.vue
apps/docs/: astro.config.mjs  package.json
crates/lore-core/: Cargo.toml
crates/lore-core/src/: lib.rs
crates/lore-editor/: Cargo.toml
crates/lore-editor/src/: commands.rs  editor.rs  frontmatter.rs  ignore.rs  index.rs  lib.rs  model.rs  state.rs  templates.rs  watcher.rs
crates/lore-test-utils/: Cargo.toml
crates/lore-test-utils/src/: main.rs
crates/lore-workspaces/: Cargo.toml
crates/lore-workspaces/src/: commands.rs  form_config.rs  icons.rs  image_commands.rs  image_manager.rs  lib.rs  manifest.rs  model.rs  models.rs  recent.rs  registry.rs
docs/: CONTRIBUTING.md  architecture.md
plugins/tauri-plugin-tracing/: Cargo.toml  build.rs  package.json
plugins/tauri-plugin-tracing/guest-js/: index.ts
plugins/tauri-plugin-tracing/permissions/: default.toml
plugins/tauri-plugin-tracing/permissions/autogenerated/: reference.md
plugins/tauri-plugin-tracing/permissions/autogenerated/commands/: clear_log_buffer.toml  get_log_history.toml  log_debug.toml  log_error.toml  log_info.toml  log_trace.toml  log_warn.toml
plugins/tauri-plugin-tracing/permissions/schemas/: schema.json
plugins/tauri-plugin-tracing/src/: commands.rs  config.rs  desktop.rs  error.rs  layer.rs  lib.rs  models.rs
scripts/: split-locales.ts
src/: App.vue  app.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  error.rs  lib.rs  models.rs  system_info.rs  utils.rs
src-tauri/src/commands/: github.rs  help.rs
src-tauri/src/core/: error.rs  mod.rs
src-tauri/src/core/config/: mod.rs  preferences.rs
src-tauri/src/workspace/: commands.rs  mod.rs
src/assets/: global.css
src/assets/css/: tailwind.css
src/components/: CharacterCard.vue  CreateProjectDialog.vue  CustomBreadcrumb.vue  DateRangePicker.vue  FeatureCard.vue  FontSelector.vue  GlobalCommand.vue  HelpPopover.vue  ImageUploader.vue  LangSwitcher.vue  SettingsNav.vue  SideBar.vue  TitleBar.vue  UpdateNotification.vue
src/components/dialogue/: DialogueDesigner.vue  DialogueNode.vue  KeyBindings.vue  NodeToolbar.vue  RemoveDialog.vue  TopToolbar.vue  VariablesDialog.vue
src/components/projects/: CreateProjectDialog.vue  EditProjectForm.vue  ProjectCard.vue  ProjectDashboard.vue  ProjectList.vue  ProjectRequiredOverlay.vue  ProjectSelector.vue
src/composables/: useCharacterEvents.ts  useCharacterRole.ts  useErrorHandler.ts
src/config/: i18n.config.ts  log.config.ts
src/data/: features.ts
src/exceptions/: db.error.ts  errorBase.ts  tauri.error.ts
src/interfaces/: index.ts  models.ts
src/interfaces/requests/: character.request.ts
src/layouts/: default.vue
src/layouts/settings/: default.vue
src/locales/: en.ts  es.ts
src/modules/common/components/: AppPreferencesForm.vue
src/modules/common/stores/: preferences.store.ts
src/modules/wizard/components/: WizardSidebar.vue  WorkspaceItem.vue
src/modules/wizard/views/: NewWorkspaceView.vue  PluginsView.vue  SettingsView.vue  WorkspacesView.vue
src/pages/: about.vue  help.vue  index.vue  settings.vue
src/pages/characters/: [id].vue  create.vue  index.vue
src/pages/characters/[id]/: edit.vue  index.vue
src/pages/dialogue/: index.vue
src/pages/projects/: index.vue
src/pages/projects/[id]/: edit.vue  index.vue
src/plugins/: fonts.ts  i18n.ts
src/router/: index.ts
src/stores/: character.store.ts  db.store.ts  font.store.ts  image.store.ts  index.ts  language.store.ts  project.store.ts  updater.store.ts
(+111 files in other folders)
