[workspace]
resolver = "2"
members = ["apps/desktop/src-tauri", "crates/*"]


[workspace.dependencies]
log = "0.4"
anyhow = "1.0.98"
thiserror = "2.0.12"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.6.2", features = ["protocol-asset"] }
tauri-plugin-store = "2"
chrono = "0.4.41"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
