[workspace]
resolver = "2"
members = ["apps/desktop/src-tauri", "crates/*", "plugins/*"]


[workspace.dependencies]
log = "0.4"
anyhow = "1"
thiserror = "2"
toml = "0.9"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-store = "2"
tracing = "0.1"
chrono = "0.4"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
