[workspace]
resolver = "2"
members = ["apps/desktop/src-tauri", "crates/*"]


[workspace.dependencies]
anyhow = "1"
thiserror = "2"
toml = "0.9"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-store = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
tauri-plugin-tracing = {version = "0.3", features = ["colored"]}

[profile.dev]
incremental = true
opt-level = 0
debug = 0 
strip = "debuginfo"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3 
panic = "abort"
strip = true

[profile.dev-verbose]
inherits = "dev"
debug = true