[package]
name = "lore_designer"
version = "0.1.0"
description = "A streamlined game narrative and worldbuilding tool for indie developers"
authors = ["Ángel Cuervo"]
license = "AGPL-3.0"
repository = "https://github.com/cuervolu/lore-designer"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lore_designer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.4.1", features = ["protocol-asset"] }
tauri-plugin-log = { version = "2", features = ["colored"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
chrono = { version = "0.4" }
sysinfo = "0.34.2"
tauri-plugin-drpc = "0.1.4"


[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
