[package]
name = "lore-editor"
version = "0.1.0"
edition = "2024"

[dependencies]
ignore = "0.4.22"
walkdir = "2.5.0"
tauri = {workspace = true}
tauri-plugin-store = {workspace = true}
anyhow = {workspace = true}
thiserror = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
log = {workspace = true}
uuid = {workspace = true}
notify = "8.0.0"
lore-workspaces = { path = "../lore-workspaces" }
crossbeam-channel = "0.5.15"