[package]
name = "lore-editor"
version = "0.1.0"
edition = "2024"

[dependencies]
ignore = "0.4.22"
gray_matter = "0.2.8"
tauri = {workspace = true}
yaml-rust2 = "0.10.1"
anyhow = {workspace = true}
thiserror = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
log = {workspace = true}
uuid = {workspace = true}
notify = "8.0.0"
lore-workspaces = { path = "../lore-workspaces" }
crossbeam-channel = "0.5.15"
chrono = "0.4.40"