[package]
name = "lore-test-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
log = {workspace = true}
uuid = {workspace = true}
chrono = {workspace = true}
serde_json = {workspace = true}
toml = {workspace = true}
indicatif = "0.17.11"
tempfile = "3.19.1"
rand = "0.9.1"
clap = { version = "4.5.37", features = ["derive"] }
fs_extra = "1.3.0"
env_logger = "0.11.8"
rand_chacha = "0.9.0"
