[package]
name = "lore-workspaces"
version = "0.1.0"
edition = "2024"

[dependencies]
tauri = {workspace = true}
tauri-plugin-store = {workspace = true}
anyhow = {workspace = true}
thiserror ={workspace = true}
toml = {workspace = true}
uuid = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
tracing = {workspace = true}
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }