[package]
name = "lore_designer"
version = "0.1.0"
description = "A streamlined game narrative and worldbuilding tool for indie developers"
authors = ["Ángel Cuervo"]
license = "AGPL-3.0"
repository = "https://github.com/cuervolu/lore-designer"
edition = "2021"
rust-version = "1.80.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lore_designer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
serde_json = {workspace = true}
serde = {workspace = true}
log = {workspace = true}
tauri = {workspace = true}
tauri-plugin-log = { version = "2", features = ["colored"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = {workspace = true}
tauri-plugin-drpc = "0.1.6"
chrono = { version = "0.4" }
sysinfo = "0.37.0"
thiserror = {workspace = true}

lore-workspaces = { path = "../../../crates/lore-workspaces" }
lore-editor = { path = "../../../crates/lore-editor" }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
