[package]
name = "lore-designer"
version = "0.1.0"
description = "A calm desktop workspace for writers and worldbuilders."
authors = ["cuervolu"]
edition = "2021"

[lib]
name = "lore_designer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
